@startuml
title Diagramme de classes de la 3ème itération

package "Base" {
    class Classe #ffcccc{
        - nom : String
        - acces : int
        + Classe(String nom, int acces)
        + addMethode(Methode methode) : void
        + addAttribut(Attribut attribut) : void
        + removeAttribut(Attribut attribut) : void
        + getAttributs() : List<Attribut>
        + removeMethode(Methode methode) : void
        + getMethodes() : List<Methode>
        + String getNom() : String
    }

    class Methode #ffcccc{
        - acces : int
        - nom : String
        - typeRetour : Class
        + Methode(int acces, String nom, Class typeRetour, List<Attribut> parametres)
        + getAcces() : int
        + getNom() : String
        + getTypeRetour() : Class
        + getParametres() : List<Attribut>
    }

    class Attribut #ffcccc{
        - nom : String
        - acces : int
        - type : Class
        + Attribut(String nom, Class type)
        + Attribut(String nom, Class type, int acces)
        + getNom() : String
        + getType() : Class
        + setNom(String nom) : void
        + setType(Class type) : void
    }
}

package "Gestion" {
    class GestionnaireClasses #ffcccc{
        + GestionnaireClasses()
        + ajouterClasse(Classe classe) : void
        + ajouterHeritage(Heritage heritage) : void
        + ajouterAssociation(Association association) : void
        + ajouterImplementation(Implementation implementation) : void
        + getClasses() : List<Classe>
        + getHeritages() : List<Heritage>
        + getAssociations() : List<Association>
        + getImplementations() : List<Implementation>
        + contientClasse(Classe classe) : boolean
        + nettoyerDoublons() : void
    }
}

package "Relations" {
    class Association #ffcccc{
        - type : String
        - cardinalite : String
        + Association(Classe classe1, Classe classe2, String type, String cardinalite)
        + getClasse1() : Classe
        + getClasse2() : Classe
        + getType() : String
        + getCardinalite() : String
    }

    class Heritage #ffcccc{
        + Heritage(Classe classeMere, Classe classeFille)
        + getClasseMere() : Classe
        + getClasseFille() : Classe
    }

    class Implementation #ffcccc{
        + Implementation(Classe classeInterface, Classe classeImplementation)
        + getClasseInterface() : Classe
        + getClasseImplementation() : Classe
    }
}

package "Import/Export" {
    class ImporteurProjet #ffcccc{
        + ImporteurProjet(GestionnaireClasses gestionnaire)
        + importerProjet(String chemin) : void
        + importerFichier(File fichier) : void
    }

    class ExportateurImagePlantUML #ffcccc{
        + exporterImage(GestionnaireClasses gestionnaireClasses, String cheminSortie) : void
    }

    class ExportateurSourceJava #ffcccc{
        + exporterSource(GestionnaireClasses gestionnaireClasses) : String
        - getJavaAcces(int acces) : String
        - exporterClasse(Classe classe, StringBuilder sb) : void
        + genererFichierTxt(String chemin, GestionnaireClasses gestionnaireClasses) : void
    }

    class ExportateurSourcePlantUML #ffcccc{
        + exporterDiagramme(GestionnaireClasses gestionnaire) : String
        - exporterClasse(Classe classe, StringBuilder sb) : void
        - getSymboleAcces(int acces) : String
    }
}

package "Vue et Modèle" {
    class Modele #ffcccc{
        + Modele()
        + remplir(GestionnaireClasses gestionnaireClasses) : void
        + getGestionnaireClasses() : GestionnaireClasses
        + enregistrerObservateur(Observateur o) : void
        + supprimerObservateur(Observateur o) : void
        + notifierObservateurs() : void
    }

    interface Observateur #ffcccc{
        + actualiser(Sujet s) : void
    }

    interface Sujet #ffcccc{
        + enregistrerObservateur(Observateur o) : void
        + supprimerObservateur(Observateur o) : void
        + notifierObservateurs() : void
    }

    class VueClasse #98FB98{
        + VueClasse(Modele modelClasse)
        + actualiser(Sujet s) : void
    }

    class VuePane #98FB98{
        - centerPane : Pane
        + VuePane(Modele modele)
        + actualiser(Sujet s) : void
    }
}

Classe "1" --> "0..*" Methode : - méthodes : List<Methode>
Classe "1" --> "0..*" Attribut : - attributs : List<Attribut>

Methode "1" --> "0..*" Attribut : - paramètres : List<Attribut>

Association "1" --> "1" Classe : - classe1 : Classe
Association "1" --> "1" Classe : - classe2 : Classe

GestionnaireClasses "1" --> "0..*" Classe : - classes : List<Classe>
GestionnaireClasses "1" --> "0..*" Heritage : - heritage : List<Heritage>
GestionnaireClasses "1" --> "0..*" Association : - associations : List<Association>
GestionnaireClasses "1" --> "0..*" Implementation : - implementations : List<Implementation>

Heritage "1" --> "1" Classe : - classeMere : Classe
Heritage "1" --> "1" Classe : - classeFille : Classe

Implementation "1" --> "1" Classe : - classeInterface : Classe
Implementation "1" --> "1" Classe : - classeImplementation : Classe

ImporteurProjet "1" --> "1" GestionnaireClasses : - gestionnaire : GestionnaireClasses

Modele "1" --> "0..*" Observateur : - observateurs : ArrayList<Observateur>
Modele "1" --> "1" GestionnaireClasses : - gestionnaireClasses : GestionnaireClasses
Modele ..|> Sujet

VueClasse "1" --> "1" Modele : - modelClasse : Modele
VueClasse ..|> Observateur

VuePane "1" --> "1" Modele : - modele : Modele
VuePane ..|> Observateur

@enduml